feat: update template

--- a/server/views/www/common/base.html
+++ b/server/views/www/common/base.html
@@ -11,7 +11,7 @@
         <meta name="description" content="{{description}}" />
         <link rel="icon" href="//img.yzcdn.cn/v2/image/yz_fc.ico">
         {% block base_style %}
-            {{ loadStyle('www/styles/common/base') }}
+            {{ loadCss('www/styles/common/base') }}
         {% endblock %}
         {% block project_style %}{% endblock %}
         {% block page_style %}{% endblock %}
