--- a/server_dist/views/www/index/index.html
+++ b/server_dist/views/www/index/index.html
@@ -1,1 +1,1 @@
-{% extends './base.html' %} {% block page_style %} {{ loadCss('www/styles/pages/index/index') }} {% endblock %} {% block page_content %} <div id="app">This is index page.</div> {% endblock %} {% block page_script %} {{ loadJs('www/js/src/index') }} {% endblock %}
+{% extends './base.html' %} {% block page_style %} {{ loadCss('www/styles/pages/index/index') | safe }} {% endblock %} {% block page_content %} <div id="app">This is index page.</div> {% endblock %} {% block page_script %} {{ loadJs('www/js/src/index') | safe }} {% endblock %}
