feat: update tpl

--- a/server/views/pc/common/base.html
+++ b/server/views/pc/common/base.html
@@ -11,7 +11,7 @@
         <meta name="description" content="{{description}}" />
         <link rel="icon" href="//img.yzcdn.cn/v2/image/yz_fc.ico">
         {% block base_style %}
-            {{ loadCss('www/styles/common/base') | safe }}
+            {{ loadCss('pc/styles/common/base') | safe }}
         {% endblock %}
         {% block project_style %}{% endblock %}
         {% block page_style %}{% endblock %}
