feat: add new env config

--- a/server_dist/views/common/404.html
+++ b/server_dist/views/common/404.html
@@ -1,1 +1,1 @@
-{% extends './common/base.html' %} {% block page_content %} <h2>404</h2> {% endblock %}
+{% extends './base.html' %} {% block page_content %} <h2>404</h2> {% endblock %}
