--- a/server_dist/views/common/403.html
+++ b/server_dist/views/common/403.html
@@ -1,1 +1,1 @@
-{% extends './common/base.html' %} {% block page_content %} <h2>403</h2> {% endblock %}
+{% extends './base.html' %} {% block page_content %} <h2>403</h2> {% endblock %}
